feat: Optimize application for GitHub Pages deployment
- Refactor App component to improve error handling and loading states.
- Remove FeedbackForm component as it is no longer needed.
- Update main entry point to streamline environment variable usage.
- Enhance array utility functions with additional error handling and examples.
- Simplify environment variable management and ensure type safety.
- Update TypeScript configuration for stricter type checks.
- Modify Vite configuration to improve build performance and error logging.

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
-# 必須環境変数
+# Google Maps関連
 VITE_GOOGLE_MAPS_API_KEY=your_maps_api_key_here
+VITE_GOOGLE_MAPS_MAP_ID=your_map_id_here
 
-# オプション環境変数（デフォルト値あり）
-VITE_DEFAULT_ZOOM=12
-VITE_DEFAULT_CENTER_LAT=38.0503
-VITE_DEFAULT_CENTER_LNG=138.3716
-VITE_APP_TITLE=佐渡で食えっちゃ
+# Google Sheets関連
+VITE_GOOGLE_SHEETS_API_KEY=your_sheets_api_key_here
+VITE_GOOGLE_SPREADSHEET_ID=your_spreadsheet_id_here
 
-# その他のオプション環境変数
-# VITE_GOOGLE_MAPS_MAP_ID=
-# VITE_GOOGLE_SHEETS_API_KEY=
-# VITE_GOOGLE_SPREADSHEET_ID=
+# EmailJS関連
+VITE_EMAILJS_SERVICE_ID=your_emailjs_service_id_here
+VITE_EMAILJS_TEMPLATE_ID=your_emailjs_template_id_here
+VITE_EMAILJS_PUBLIC_KEY=your_emailjs_public_key_here
+
+# 必要に応じて値を変更してください
+# 実際のキーや秘密値は.envファイルに設定し、.gitignoreに追加して保護してください
