--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "description": "佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。オフラインでも使える観光支援アプリ。",
   "id": "sado-kueecha-app",
   "lang": "ja",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "/kueccha/",
+  "scope": "/kueccha/",
   "display": "standalone",
   "display_override": ["minimal-ui"],
   "orientation": "any",
@@ -14,13 +14,13 @@
   "categories": ["food", "travel", "navigation"],
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/kueccha/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/kueccha/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -30,10 +30,10 @@
     {
       "name": "飲食店を探す",
       "short_name": "飲食店",
-      "url": "/?category=restaurant",
+      "url": "/kueccha/?category=restaurant",
       "icons": [
         {
-          "src": "/icons/restaurant-192x192.png",
+          "src": "/kueccha/icons/restaurant-192x192.png",
           "sizes": "192x192",
           "type": "image/png"
         }
@@ -42,10 +42,10 @@
     {
       "name": "駐車場を探す",
       "short_name": "駐車場",
-      "url": "/?category=parking",
+      "url": "/kueccha/?category=parking",
       "icons": [
         {
-          "src": "/icons/parking-192x192.png",
+          "src": "/kueccha/icons/parking-192x192.png",
           "sizes": "192x192",
           "type": "image/png"
         }
@@ -54,10 +54,10 @@
     {
       "name": "トイレを探す",
       "short_name": "トイレ",
-      "url": "/?category=toilet",
+      "url": "/kueccha/?category=toilet",
       "icons": [
         {
-          "src": "/icons/toilet-192x192.png",
+          "src": "/kueccha/icons/toilet-192x192.png",
           "sizes": "192x192",
           "type": "image/png"
         }
@@ -65,8 +65,8 @@
     }
   ],
   "serviceworker": {
-    "src": "/service-worker.js",
-    "scope": "/"
+    "src": "/kueccha/service-worker.js",
+    "scope": "/kueccha/"
   },
   "offline_enabled": true
 }
