--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
+# Google APIキー関連
+VITE_GOOGLE_API_KEY=your_maps_api_key_here
+
 # Google Maps関連
-VITE_GOOGLE_MAPS_API_KEY=your_maps_api_key_here
 VITE_GOOGLE_MAPS_MAP_ID=your_map_id_here
 
 # Google Sheets関連
-VITE_GOOGLE_SHEETS_API_KEY=your_sheets_api_key_here
 VITE_GOOGLE_SPREADSHEET_ID=your_spreadsheet_id_here
 
 # EmailJS関連
