--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "type": "module",
   "author": "Yuichiro Nakaguchi <nakaguchi07@gmail.com>",
   "license": "ISC",
-  "repository": "github:nakanaka07/sadodekueccha",
+  "repository": "github:nakanaka07/kueccha",
   "engines": {
     "node": ">=20"
   },
   "scripts": {
     "dev": "pnpm run check:env && vite",
-    "mobile:dev": "pnpm run check:env && vite --host",
+    "mobile:dev": "VITE_MOBILE=true pnpm run check:env && vite --host",
     "build": "pnpm run check:env && vite build",
     "build:prod": "pnpm run build && pnpm run optimize",
+    "build:pages": "cross-env BASE_PATH=/kueccha/ NODE_ENV=production vite build && pnpm run optimize",
     "optimize": "ts-node scripts/optimize-assets.ts",
     "preview": "vite preview",
+    "preview:pages": "cross-env BASE_PATH=/kueccha/ vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -27,7 +29,8 @@
     "check:env": "ts-node scripts/check-env.ts",
     "prepare": "husky",
     "reset": "rimraf node_modules pnpm-lock.yaml dist && pnpm store prune",
-    "analyze": "vite build --mode analyze"
+    "analyze": "vite build --mode analyze",
+    "generate:pwa-assets": "pwa-assets-generator"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
@@ -45,10 +48,12 @@
     "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
+    "@vite-pwa/assets-generator": "^0.2.4",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.0.9",
     "@vitest/ui": "^3.0.9",
     "chalk": "^5.4.1",
+    "cross-env": "^7.0.3",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
@@ -70,8 +75,26 @@
     "vitest": "^3.0.9"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": ["eslint --fix", "prettier --write"],
-    "*.{json,md,yml,css,scss}": ["prettier --write"]
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,yml,css,scss}": [
+      "prettier --write"
+    ]
   },
-  "browserslist": [">1%", "last 2 versions", "not dead", "not IE 11", "Chrome >= 90", "iOS >= 14"]
+  "browserslist": [
+    ">1%",
+    "last 2 versions",
+    "not dead",
+    "not IE 11",
+    "Chrome >= 90",
+    "iOS >= 14"
+  ],
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "sharp"
+    ]
+  }
 }
