feat: Enhance environment variable validation and logging in check-env script
feat: Implement online/offline status monitoring in App component

fix: Correct import order and structure in various components and adapters

refactor: Optimize imports and improve type definitions across the application

chore: Update TypeScript configuration for better project structure and optimization

chore: Refactor Vite configuration for GitHub Pages optimization and improve build process

style: Clean up code formatting and ensure consistent import statements

fix: Address minor bugs and improve error handling in various services and hooks

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,47 @@
-# Google APIキー関連
+# =============================================================================
+# 佐渡で食えっちゃ - 環境変数設定（GitHub Pages最適化版）
+# =============================================================================
+
+# ==== Google API関連設定 ====
+# Google Maps API Key - 地図表示に必須
 VITE_GOOGLE_API_KEY=your_maps_api_key_here
-
-# Google Maps関連
+# Google Maps Map ID - カスタムスタイル用
 VITE_GOOGLE_MAPS_MAP_ID=your_map_id_here
-
-# Google Sheets関連
+# Google Sheets ID - POIデータ管理用
 VITE_GOOGLE_SPREADSHEET_ID=your_spreadsheet_id_here
 
-# EmailJS関連
+# ==== EmailJS関連設定 ====
+# 問い合わせフォーム送信用
 VITE_EMAILJS_SERVICE_ID=your_emailjs_service_id_here
 VITE_EMAILJS_TEMPLATE_ID=your_emailjs_template_id_here
 VITE_EMAILJS_PUBLIC_KEY=your_emailjs_public_key_here
 
-# 必要に応じて値を変更してください
-# 実際のキーや秘密値は.envファイルに設定し、.gitignoreに追加して保護してください
+# ==== GitHub Pages 固有設定 ====
+# ベースパス - GitHub Pagesでのルートパス
+# 開発環境では "/" 、本番環境では "/kueccha/" を使用
+# GitHub Actionsでは自動的に設定されるため手動設定不要
+BASE_PATH=/kueccha/
+
+# ==== ビルド設定 ====
+# 本番環境かどうか - GitHub Actions経由で自動設定
+# NODE_ENV=production
+
+# ==== PWA設定 ====
+# PWA名 - マニフェストファイル用
+VITE_APP_NAME=佐渡で食えっちゃ
+# PWA短縮名 - ホーム画面アイコン用
+VITE_APP_SHORT_NAME=食えっちゃ
+# PWAの説明
+VITE_APP_DESCRIPTION=佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。
+
+# =============================================================================
+# 環境変数管理ガイド
+# =============================================================================
+# 開発環境: このファイルを「.env」にコピーし、実際の値を設定
+# 本番環境: GitHub Secretsで環境変数を設定（GitHub Actions経由で自動取得）
+#
+# 注意事項:
+# - API Keyなどの機密情報は.envに設定し、Gitにコミットしないでください
+# - GitHub Actionsのワークフローでは、GitHub Secretsから環境変数が注入されます
+# - ビルド時に環境変数は静的に埋め込まれます（クライアントサイドで動的に読み込みません）
+# =============================================================================
