--- a/.npmrc
+++ b/.npmrc
@@ -1,9 +1,23 @@
-# 基本設定
+# 基本設定 - GitHub Pages最適化
 registry=https://registry.npmjs.org/
 save-exact=true
 prefer-offline=true
 progress=false
-# pnpm特有の設定
+
+# パフォーマンス最適化
+cache-min=3600
+fetch-retries=3
+fetch-retry-mintimeout=5
+fetch-retry-maxtimeout=60000
+
+# pnpm特有の設定 - 静的サイト向け
 shamefully-hoist=true
 strict-peer-dependencies=false
 auto-install-peers=true
+node-linker=hoisted
+
+# GitHub Pages向けビルド設定
+public-hoist-pattern[]=*@types*
+public-hoist-pattern[]=*eslint*
+public-hoist-pattern[]=*prettier*
+public-hoist-pattern[]=*vite*
