--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,87 @@
-# 依存関係
+# ==============================================================================
+# 依存関係 - npm/pnpm管理ファイル
+# ==============================================================================
 node_modules/
 .npm
-*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .pnpm-store/
+.pnpm-debug.log*
 
-# ビルド出力
+# ==============================================================================
+# ビルド出力 - GitHub Pages向け設定
+# ==============================================================================
 dist/
 build/
 .vite/
 coverage/
 *.tsbuildinfo
+stats.html
+.cache/
+# 画像最適化の一時ファイル
+.temp-optimized/
 
-# 環境変数
+# ==============================================================================
+# 環境変数 - セキュリティとCI/CD
+# ==============================================================================
 .env*
 !.env.example
+# GitHub Actions用シークレット（ローカルテスト用）
+.github/secrets/
 
-# エディタ
+# ==============================================================================
+# エディタ設定
+# ==============================================================================
 .vscode/*
 !.vscode/extensions.json
 !.vscode/settings.json
+!.vscode/launch.json
 .idea/
+*.sublime-*
+*.swp
+*.swo
 
-# OS
+# ==============================================================================
+# OS生成ファイル
+# ==============================================================================
 .DS_Store
 Thumbs.db
+Desktop.ini
 
-# キャッシュ
+# ==============================================================================
+# キャッシュと一時ファイル
+# ==============================================================================
 .cache/
 .eslintcache
+.stylelintcache
+.parcel-cache
+.rpt2_cache/
+.rts2_cache*/
 
-# セキュリティ
+# ==============================================================================
+# セキュリティ関連ファイル
+# ==============================================================================
 *.pem
 *.key
 *.crt
 *secrets*
+# 認証情報を含む可能性のあるファイル
+*auth*config*
+*credentials*
+
+# ==============================================================================
+# GitHub Pages特有の除外設定
+# ==============================================================================
+# ローカルでのGitHub Pages検証用ファイル
+_site/
+.jekyll-cache/
+.jekyll-metadata
+
+# ==============================================================================
+# PWA関連
+# ==============================================================================
+# サービスワーカーのデバッグファイル
+**/sw.js.map
+**/workbox-*.js
+**/workbox-*.js.map
