feat: Refactor environment variable validation and logging
- Directly define APP_CONFIG in check-env.ts and optimize-assets.ts to reduce dependencies.
- Implement safeGetEnvValue and safeSetEnvValue functions for secure environment variable handling.
- Enhance logging functionality with structured log categories and codes.
- Update validateEnv function to improve security and clarity in environment variable checks.
- Optimize asset handling in optimize-assets.ts with improved logging and error handling.
- Remove unused HTML and PWA optimization functions for cleaner code.
- Update TypeScript configuration for better module handling and optimization.
- Add .hintrc for HTML hinting configuration.

--- a/.npmrc
+++ b/.npmrc
@@ -9,6 +9,9 @@ cache-min=3600
 fetch-retries=3
 fetch-retry-mintimeout=5
 fetch-retry-maxtimeout=60000
+fetch-retry-factor=2 # バックオフ戦略の追加
+update-notifier=false # 不要な更新通知を無効化
+resolution-mode=highest # 依存関係解決の最適化
 
 # pnpm特有の設定 - 静的サイト向け
 shamefully-hoist=true
