feat: Update testing setup and Google Maps API mocks for improved test coverage

--- a/package.json
+++ b/package.json
@@ -9,20 +9,16 @@
     "build:dev": "cross-env NODE_ENV=development vite build",
     "build:prod": "cross-env NODE_ENV=production vite build",
     "analyze": "cross-env ANALYZE=true vite build",
-
     "preview": "vite preview",
     "start": "vite preview",
-
     "lint": "eslint . --fix",
     "lint:unused": "npx depcheck",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
-
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:a11y": "echo 'Running accessibility tests' && exit 0",
-
     "prepare": "husky install",
     "reset": "rimraf node_modules pnpm-lock.yaml dist && pnpm store prune"
   },
@@ -68,7 +64,8 @@
     "typescript-eslint": "^8.27.0",
     "vite": "^6.2.2",
     "vite-plugin-pwa": "^0.21.2",
-    "vitest": "^3.0.9"
+    "vitest": "^3.0.9",
+    "whatwg-fetch": "^3.6.20"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
