feat: Refactor App component and enhance error handling
- Improved state management in App component with useMemo for performance.
- Introduced LoadingOverlay and ErrorDisplay components for better UI feedback.
- Simplified filter logic by creating reusable FilterComponents.
- Enhanced global CSS with variables for better maintainability.
- Added environment variable validation with user-friendly error notification.
- Implemented useFilterLogic hook for cleaner filter management.
- Updated TypeScript definitions for better type safety.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,7 +46,7 @@
       "@config/*": ["src/config/*"]
     }
   },
-  "include": ["src", "vite-env.d.ts"],
+  "include": ["src", "vite-env.d.ts", "react-extensions.d.ts"],
   "exclude": ["node_modules", "dist", "build"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
