Refactor imports and improve code structure
- Updated import paths to use absolute paths for better readability.
- Moved utility functions to appropriate locations for better organization.
- Added new components for displaying POI details, including sections for categories, address, business hours, contact information, Google Maps link, and footer.
- Implemented a status badge component to indicate POI operating status.
- Created a custom hook for filtering POIs based on various criteria.
- Developed a custom hook for managing map markers, including clustering and visibility optimization.
- Introduced a logger utility for improved error handling and logging throughout the application.
- Added category utility for determining CSS classes based on POI categories.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,22 +28,12 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@assets/*": ["src/assets/*"],
-      "@components/*": ["src/components/*"],
-      "@constants/*": ["src/constants/*"],
-      "@hooks/*": ["src/hooks/*"],
-      "@pages/*": ["src/pages/*"],
-      "@services/*": ["src/services/*"],
-      "@store/*": ["src/store/*"],
-      "@styles/*": ["src/styles/*"],
-      "@types/*": ["src/types/*"],
-      "@utils/*": ["src/utils/*"],
-      "@contexts/*": ["src/contexts/*"],
-      "@layouts/*": ["src/layouts/*"],
-      "@features/*": ["src/features/*"],
-      "@api/*": ["src/api/*"],
-      "@tests/*": ["src/tests/*"],
-      "@config/*": ["src/config/*"]
+      "@/assets/*": ["src/assets/*"],
+      "@/components/*": ["src/components/*"],
+      "@/constants/*": ["src/constants/*"],
+      "@/hooks/*": ["src/hooks/*"],
+      "@/types/*": ["src/types/*"],
+      "@/utils/*": ["src/utils/*"]
     }
   },
   "include": ["src", "vite-env.d.ts", "react-extensions.d.ts"],
