--- a/.github/workflows/deploy-vite-app.yml
+++ b/.github/workflows/deploy-vite-app.yml
@@ -35,7 +35,21 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
+        
+      # pnpmキャッシュをより効果的に活用
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        run: |
+          echo "store-path=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.pnpm-cache.outputs.store-path }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
 
       # リポジトリ名から動的にBASE_PATHを設定
       - name: Extract repository name
@@ -44,6 +58,10 @@ jobs:
           REPO_NAME=${GITHUB_REPOSITORY#*/}
           echo "name=$REPO_NAME" >> $GITHUB_OUTPUT
           echo "リポジトリ名 '$REPO_NAME' からベースパスを設定: /$REPO_NAME/"
+
+      # 型チェック
+      - name: Run type check
+        run: pnpm typecheck || echo "::warning::Type check issues found, but continuing build"
 
       - name: Build
         env:
@@ -64,7 +82,18 @@ jobs:
           
           # GitHub Pages ベースパス - リポジトリ名から動的に設定
           BASE_PATH: /${{ steps.repo-name.outputs.name }}/
+          
+          # 本番環境であることを明示
+          NODE_ENV: production
         run: pnpm build
+
+      # ビルド結果の検証（任意のファイルが存在することを確認）
+      - name: Verify build output
+        run: |
+          if [ ! -f "./dist/index.html" ]; then
+            echo "::error::Build failed - index.html not found in dist directory"
+            exit 1
+          fi
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -73,6 +102,14 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: './dist'
+          
+      # ビルド成果物のサイズ確認（参考値）
+      - name: Check build size
+        run: |
+          BUILD_SIZE=$(du -sh ./dist | cut -f1)
+          echo "Build size: $BUILD_SIZE"
+          echo "build-size=$BUILD_SIZE" >> $GITHUB_OUTPUT
+        id: build-size
 
   deploy:
     environment:
@@ -84,3 +121,11 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+      
+      # デプロイ成功通知
+      - name: Deployment success summary
+        if: success()
+        run: |
+          echo "✅ デプロイ成功！"
+          echo "📊 デプロイURL: ${{ steps.deployment.outputs.page_url }}"
+          echo "🕒 デプロイ時刻: $(date)"
