fix: 修正依存関係インストールステップでのロックファイル不一致エラー対策

--- a/.github/workflows/deploy-vite-app.yml
+++ b/.github/workflows/deploy-vite-app.yml
@@ -34,8 +34,9 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
+      # 依存関係インストールのステップを修正（ロックファイルの不一致エラー対策）
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile || pnpm install --no-frozen-lockfile
         
       # pnpmキャッシュをより効果的に活用
       - name: Get pnpm store directory
