--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -36,7 +36,8 @@
     // パスエイリアスの活用（code_optimization_guidelinesに記載された推奨事項）
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@App/*": ["src/App/*"]
     }
   },
   "include": [
